[metadata]
name = lingyi-pkg
version = 0.0.1
author = Lingyi Tan
author_email = tanlingyi.pku@gmail.com
description = Lingyi's utility package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lingyi-tan/lingyi-pkg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8